# polybench

./: .gitignore  README.md  pyproject.toml
examples/: calibration_template.json  capture_mouse_pos.py  kaggle_local_example.py  state_example.json
mirts_bench/: __init__.py
mirts_bench/llm/: kaggle_local.py
polybench/: __init__.py
polytopia_bench/: __init__.py  benchmark.py  cli.py  game_api.py  prompt.py  schema.py
polytopia_bench/adapters/: __init__.py  mini_rts.py  ui_automation.py
polytopia_bench/llm/: __init__.py  kaggle_local.py
