[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirts-bench"
version = "0.3.0"
description = "MiniRTS LLM Benchmark"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["minirts", "rts", "benchmark", "llm", "grid"]
dependencies = []

[project.urls]
Homepage = "https://github.com/solosofi/mirts-bench"
Repository = "https://github.com/solosofi/mirts-bench"

[project.scripts]
polybench = "polytopia_bench.cli:cli_main"
mirtsbench = "polytopia_bench.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polytopia_bench*", "polybench*"]
