[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirts-bench"
version = "0.4.1"
description = "MiniRTS LLM Benchmark"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["minirts", "rts", "benchmark", "llm", "grid"]
dependencies = []

[project.urls]
Homepage = "https://github.com/solosofi/mirts-bench"
Repository = "https://github.com/solosofi/mirts-bench"

[project.scripts]
polybench = "mirts_bench.cli:cli_main"
mirtsbench = "mirts_bench.cli:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mirts_bench*", "polybench*"]
